# scrappingAutoLinux

./: diagramme.md  pyproject.toml
weeklymoviesscraper/: scrapy.cfg
weeklymoviesscraper/weeklymoviesscraper/: .env  allomovies.csv  create_postgres.sh  database.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
weeklymoviesscraper/weeklymoviesscraper/spiders/: allomovies.py
