[tool.poetry]
name = "brief scrapping automatisé"
version = "0.1.0"
description = ""
authors = ["lnd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
